WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87608
HTMLFormControlElement::m_validationMessage shouldn't be cleared on detach()
https://bugs.webkit.org/show_bug.cgi?id=87608
Summary
HTMLFormControlElement::m_validationMessage shouldn't be cleared on detach()
Hajime Morrita
Reported
2012-05-27 18:35:26 PDT
This is a preparation for
Bug 87223
. ValidationMessage mutates DOM tree. But mutating DOM tree during detach() causes troubles which we hit by the change on
Bug 87223
. It could be moved to removedFrom().
Attachments
Patch
(1.74 KB, patch)
2012-05-27 19:02 PDT
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.47 KB, patch)
2012-05-27 21:59 PDT
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2012-05-27 19:02:32 PDT
Created
attachment 144256
[details]
Patch
Kent Tamura
Comment 2
2012-05-27 21:04:12 PDT
Comment on
attachment 144256
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=144256&action=review
> Source/WebCore/html/HTMLFormControlElement.cpp:76 > void HTMLFormControlElement::detach() > { > - m_validationMessage = nullptr; > HTMLElement::detach(); > }
So, we can remove HTMLFormControlElement::detach().
Hajime Morrita
Comment 3
2012-05-27 21:25:17 PDT
Comment on
attachment 144256
[details]
Patch
> So, we can remove HTMLFormControlElement::detach().
True. will do. Thanks for taking look!
Hajime Morrita
Comment 4
2012-05-27 21:59:31 PDT
Created
attachment 144264
[details]
Patch for landing
WebKit Review Bot
Comment 5
2012-05-28 02:54:21 PDT
Comment on
attachment 144264
[details]
Patch for landing Clearing flags on attachment: 144264 Committed
r118664
: <
http://trac.webkit.org/changeset/118664
>
WebKit Review Bot
Comment 6
2012-05-28 02:54:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug