HTMLFormControlElement::m_validationMessage shouldn't be cleared on detach() https://bugs.webkit.org/show_bug.cgi?id=87608

Reviewed by Kent Tamura.

Moved m_validationMessage clearance from detach() to removedFrom() and
remove detach().

No new tests. This change has no visible difference. Upcoming changes rely on this though.

* html/HTMLFormControlElement.cpp:
(WebCore::HTMLFormControlElement::removedFrom):


Canonical link: https://commits.webkit.org/105409@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118664 268f45cc-cd09-0410-ab3c-d52691b4dbfc